ajustando autenticação e jwt